Fixed git issue and updated files

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login - Finance Tracker{% endblock %}
+{% block title %}Login - Jagals money stuff{% endblock %}
 
 {% block content %}
 <div class="container py-5">
