--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Register - Finance Tracker{% endblock %}
+{% block title %}Register - you can deffintely trust my website{% endblock %}
 
 {% block content %}
 <div class="container py-5">
