--- a/app/templates/dashboard/index.html
+++ b/app/templates/dashboard/index.html
@@ -6,13 +6,11 @@
 <div class="dashboard-container">
     <div class="dashboard-header">
         <h1>OVERVIEW</h1>
-        
         <div class="date-range-selector">
-            <button id="last-week" class="btn {{ 'active' if range == 'week' else '' }}">Last week</button>
-            <button id="last-month" class="btn {{ 'active' if range == 'month' else '' }}">Last month</button>
-            <button id="custom-range" class="btn {{ 'active' if range == 'custom' else '' }}">Custom range</button>
-        </div>
-    </div>
+    <button id="last-month" class="btn {{ 'active' if range == 'month' else '' }}">Last month</button>
+    <button id="last-3-months" class="btn {{ 'active' if range == '3months' else '' }}">Last 3 months</button>
+    <button id="custom-range" class="btn {{ 'active' if range == 'custom' else '' }}">Custom range</button>
+</div>
     
     <div class="dashboard-content">
         <div class="row">
