--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -97,7 +97,7 @@
         </div>
     </footer>
     
-    <!-- Scripts -->
+    <!-- In your base.html or at the end of your dashboard/index.html template -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     {% block scripts %}{% endblock %}
 </body>
