--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,8 +17,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('dashboard.dashboard') }}">
-                <i class="fas fa-chart-pie"></i> Jack's finance tracker that you can defintely trust
-            </a>
+    <i class="fas fa-chart-pie"></i> 
+    <span class="full-title">Jack's finance tracker that you can defintely trust</span>
+    <span class="mobile-title">Finance Tracker</span>
+</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
