--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,8 +18,8 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('dashboard.dashboard') }}">
     <i class="fas fa-chart-pie"></i> 
-    <span class="full-title">Jack's finance tracker that you can defintely trust</span>
-    <span class="mobile-title">Finance Tracker</span>
+    <span class="full-title">Where's my money going</span>
+    <span class="mobile-title">here's my money going</span>
 </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
